# browser-automation-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: api-reference.md  audit-hardening.md  github-publication.md  server-deployment.md
examples/: hermes-config.yaml
scripts/: e2e_test.py  make_release_export.py  smoke_mcp.py
